# GeoCP_RS

./: .gitignore  ANALYSIS_UPDATE.md  CHANGELOG.md  EXPERIMENTS_SUMMARY.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  pyproject.toml
analysis/: README.md  accuracy_vs_improvement_10pts.csv  alpha_sensitivity_C_vs_A.csv  alpha_sensitivity_C_vs_D.csv  alpha_sweep_paired_tests.csv  alpha_sweep_pooled.csv  clustered_tests_C_vs_A.csv  clustered_tests_C_vs_A_GRAND.csv  clustered_tests_C_vs_A_HSI.csv  clustered_tests_C_vs_A_S2.csv  clustered_tests_C_vs_D.csv  clustered_tests_C_vs_D_GRAND.csv  clustered_tests_C_vs_D_HSI.csv  clustered_tests_C_vs_D_S2.csv  method_E_paired_tests.csv  method_E_per_run.csv  per_seed_alpha.csv  per_seed_alpha_sstn.csv  s2_alpha_sweep_paired_tests.csv  s2_alpha_sweep_pooled.csv  s2_per_config_alpha.csv  size_vs_difficulty.csv  size_vs_difficulty_pooled.csv  sscv_per_dataset.csv  sscv_pooled.csv
analysis/scripts/: alpha_sweep_analysis.py  clustered_tests.py  compute_method_E.py  extra_analyses.py  generate_analysis.py  grand_alpha_analysis.py  method_E_colab.ipynb  s2_all_tiles_overview.py  s2_alpha_sweep_analysis.py  s2_spatial_figure.py  sstn_analysis.py
docs/: ALGORITHM.md  EXPERIMENT_PROTOCOL.md  INSTALLATION.md  RESULTS_ANALYSIS.md  USAGE.md
examples/: quick_start.py
geocp_rs/: __init__.py  cli.py  core.py  datasets.py  evaluate.py  geocp.py  metrics.py  models.py  pipeline.py  sacp.py  train.py  viz.py
hsi_experiment/: README.md
hsi_experiment/notebooks/: active_learning_demo.ipynb  hsi_alpha_sweep.ipynb  hsi_joint_cv.ipynb  hsi_sstn_alpha_sweep.ipynb
hsi_experiment/results/: per_seed.csv  results_table.tex  run_log.txt  stats.json  summary.json
hsi_experiment/results/checkpoints/: botswana_seed0.pkl  botswana_seed1.pkl  botswana_seed2.pkl  botswana_seed3.pkl  botswana_seed4.pkl  botswana_seed5.pkl  botswana_seed6.pkl  botswana_seed7.pkl  ip_seed0.pkl  (+41 more)
notebooks/: alphaearth_landcover_pilot.ipynb  multiscale_ablation.ipynb  sacp_geocp_colab.ipynb
paper/: main.tex  references.bib
results/: per_seed.csv  results_table.tex  run_log.txt  stats.json  summary.json
results/checkpoints/: botswana_seed0.pkl  botswana_seed1.pkl  botswana_seed2.pkl  botswana_seed3.pkl  botswana_seed4.pkl  botswana_seed5.pkl  botswana_seed6.pkl  botswana_seed7.pkl  botswana_seed8.pkl  botswana_seed9.pkl  ip_seed0.pkl  ip_seed1.pkl  ip_seed2.pkl  ip_seed3.pkl  ip_seed4.pkl  ip_seed5.pkl  ip_seed6.pkl  ip_seed7.pkl  ip_seed8.pkl  ip_seed9.pkl  ksc_seed0.pkl  ksc_seed1.pkl  ksc_seed2.pkl  ksc_seed3.pkl  ksc_seed4.pkl  ksc_seed5.pkl  ksc_seed6.pkl  ksc_seed7.pkl  ksc_seed8.pkl  ksc_seed9.pkl  pu_seed0.pkl  pu_seed1.pkl  pu_seed2.pkl  pu_seed3.pkl  pu_seed4.pkl  pu_seed5.pkl  pu_seed6.pkl  pu_seed7.pkl  pu_seed8.pkl  pu_seed9.pkl  (+10 more)
s2_experiment/: README.md
s2_experiment/notebooks/: s2_alpha_sweep.ipynb  s2_vit_alpha_sweep.ipynb  sentinel2_landcover_pilot.ipynb
scripts/: aggregate_results.py  make_figures.py  run_all_experiments.py
tests/: test_core.py
(+65 files in other folders)
